2006-10-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-utils.[ch]
	(gimp_transform_matrix_flip_free): removed unused x,y,width,height
	parameters.

	* tools/pdbgen/pdb/drawable_transform.pdb: changed accordingly.

	* app/pdb/drawable_transform_cmds.c: regenerated.

2006-10-27  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpdata.c (gimp_data_class_init): fix typo
	in property construction code.

2006-10-27  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc app/gimpcore.def : updated

2006-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig-enums.[ch]
	* libgimpconfig/gimpcolorconfig.c
	* libgimpconfig/gimpconfig.def: removed unused enum
	GimpColorFileOpenBehaviour.

	* app/core/core-enums.[ch]: added enum GimpColorProfilePolicy.

	* app/config/gimpcoreconfig.[ch]
	* app/config/gimprc-blurbs.h: added property "color-profile-policy".

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-icc-profile.[ch]: new files that wrap usage
	of the lcms plug-in.

	* app/file/file-open.c: implement the user-configured policy for
	embedded color profiles.

	* app/widgets/gimpimageprofileview.c: use the wrapper to call the
	plug-in-icc-profile-info procedure.

	* app/widgets/gimptoolbox-dnd.c: pass TRUE for "attach_comment"
	parameter to gimp_create_image().

	* app/core/gimptemplate.c
	* app/file/Makefile.am: cosmetic changes.

	* app/Makefile.am: some resorting to make the beast link again.

2006-10-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c: don't hardcode font sizes,
	moved newlines out of translatable strings.

2006-10-27  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_run):
	don't send a return value if executing the procedure closed the
	plug-in (as is the case with gimp-quit). Fixes bug #332608.

2006-10-27  Sven Neumann  <sven@gimp.org>

	* configure.in
	* plug-ins/common/plugin-defs.pl